engine-net-2/examples/Errors/RuleUnknownCompiled.grg
#include "Rules.grg"

sequence s0
{
	(n:N)=init ;> (m:M)=rr()
}
